@@ -1,3 +1,6 @@
+make clean
+make distclean
+./autogen.sh
 # -std=c++11 is added to each Makefile.am now so no longer needed
 #./configure CXXFLAGS="-g -O2 -std=c++11"
 ./configure CXXFLAGS="-g -O2"
